--- a/.github/workflows/azure-boards.yml
+++ b/.github/workflows/azure-boards.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Azure CLI
-        uses: azure/setup-azure-cli
+        uses: azure/setup-azure-cli@v2
         with:
           install-script-url: https://aka.ms/InstallAzureCLIDeb
 
